--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,22 +12,21 @@
         android:id="@+id/tv_let"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="43dp"
+        android:layout_marginStart="16dp"
         android:fontFamily="@font/samsung"
         android:text="Let\'s"
         android:textColor="@color/blue_vogue"
         android:textSize="28sp"
         android:textStyle="bold"
-        android:layout_marginStart="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/tv_sign_you_up"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/tv_sign_you_up"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginBottom="3dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginBottom="4dp"
         android:fontFamily="@font/samsung"
         android:text="Sign You up"
         android:textColor="?attr/colorOnPrimary"
@@ -40,14 +39,15 @@
         android:id="@+id/tv_your"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="85dp"
         android:fontFamily="@font/samsung"
         android:text="your meal awaits"
         android:textColor="@color/blue_vogue"
         android:textSize="28sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/tv_account"
-        app:layout_constraintTop_toBottomOf="@+id/tv_let" />
+        app:layout_constraintStart_toStartOf="@+id/tv_let"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_account"
@@ -58,15 +58,15 @@
         android:text="If you have an\naccount please"
         android:textColor="@color/lynch"
         android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/tv_sign_you_up"
-        app:layout_constraintStart_toStartOf="@+id/tv_sign_you_up"
+        app:layout_constraintStart_toStartOf="@+id/tv_your"
         app:layout_constraintTop_toTopOf="@+id/tv_your" />
 
     <TextView
         android:id="@+id/tv_sign_in"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginBottom="1dp"
         android:fontFamily="@font/samsung"
         android:text="Sign In here"
         android:textColor="?attr/colorOnPrimary"
@@ -79,20 +79,23 @@
         android:id="@+id/tv_full_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="31dp"
         android:fontFamily="@font/samsung"
         android:text="Full name"
         android:textColor="@color/blue_vogue"
         android:textSize="16sp"
-        android:layout_marginStart="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_account" />
 
     <EditText
         android:id="@+id/et_full_name"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginBottom="33dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:autofillHints="name"
         android:background="@drawable/et_background"
         android:drawableEnd="@drawable/check"
@@ -101,35 +104,34 @@
         android:inputType="textPersonName"
         android:paddingStart="20dp"
         android:paddingEnd="10dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:textColor="@color/txt_black"
         android:textColorHint="@android:color/darker_gray"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_email_address"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_full_name" />
+        app:layout_constraintTop_toTopOf="@+id/tv_full_name" />
 
     <TextView
         android:id="@+id/tv_email_address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="74dp"
         android:fontFamily="@font/samsung"
         android:text="Email Address"
         android:textColor="@color/blue_vogue"
         android:textSize="16sp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/et_email_address"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_full_name" />
 
     <EditText
         android:id="@+id/et_email_address"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="50dp"
+        android:layout_marginTop="172dp"
+        android:layout_marginBottom="172dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="44dp"
         android:autofillHints="emailAddress"
         android:background="@drawable/et_background"
         android:drawableEnd="@drawable/check"
@@ -140,31 +142,32 @@
         android:paddingEnd="10dp"
         android:textColor="@color/txt_black"
         android:textColorHint="@android:color/darker_gray"
-        app:layout_constraintBottom_toTopOf="@+id/et_pass"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_register"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tv_sign_in" />
 
     <TextView
         android:id="@+id/tv_password_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginTop="26dp"
         android:fontFamily="@font/samsung"
         android:text="Password"
         android:textColor="@color/blue_vogue"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/et_pass"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_email_address" />
 
     <EditText
         android:id="@+id/et_pass"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="50dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="12dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="12dp"
         android:autofillHints="password"
         android:background="@drawable/et_background"
         android:hint="*******"
@@ -174,60 +177,63 @@
         android:textColor="@color/txt_black"
         android:textColorHint="@android:color/darker_gray"
         app:layout_constraintBottom_toTopOf="@+id/btn_register"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_password_txt" />
 
     <ImageView
         android:id="@+id/show_pass_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
+        android:layout_marginBottom="10dp"
         android:alpha=".5"
         android:contentDescription="@string/app_name"
         android:src="@drawable/baseline_visibility_24"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/et_pass" />
+        app:layout_constraintBottom_toBottomOf="@+id/et_pass"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/btn_register"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="184dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="194dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="196dp"
         android:background="@drawable/btn_background_red"
         android:fontFamily="@font/samsung"
         android:text="Sign up"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="16sp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tv_email_address" />
 
     <TextView
         android:id="@+id/tv_by"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="58dp"
+        android:layout_marginEnd="41dp"
+        android:layout_marginBottom="18dp"
         android:fontFamily="@font/samsung"
         android:text="By signing up, you have agreed to our"
         android:textColor="@color/lynch"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/ll_terms"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <LinearLayout
         android:id="@+id/ll_terms"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="21dp"
+        android:layout_marginStart="19dp"
+        android:layout_marginBottom="40dp"
         android:gravity="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_by">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/tv_by">
 
         <TextView
             android:id="@+id/tv_terms"
